navbar alignment correction

--- a/navbar.css
+++ b/navbar.css
@@ -69,7 +69,7 @@ body {
     /* Styles for the desktop navbar */
     .nav-desktop {
       display: flex;
-      padding-left: 70%;
+      padding-left: 60%;
     }
     
     .nav-desktop a {
